--- a/about.html
+++ b/about.html
@@ -104,6 +104,9 @@
         <p class="col-md-8 fs-4 mb-2">
           Project6的練習包括使用css美化外觀、製作遊戲動畫以及使用JavaScript實現遊戲操作邏輯。
         </p>
+        <p class="col-md-8 fs-4 mb-2">
+          遊戲中透過滑鼠操控平台去接球，讓球反彈去撞擊方塊，消除完所有方塊後結束遊戲。
+        </p>
         <a
           href="https://github.com/james-chiou/breakout-clone"
           target="_blank"
