--- a/about.html
+++ b/about.html
@@ -20,7 +20,6 @@
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
-    <!-- Custom styles for this template -->
     <link href="sidebars.css" rel="stylesheet" />
   </head>
   <body>
@@ -100,13 +99,21 @@
     </main>
     <div class="ps-3 pt-2 bg-light rounded-3">
       <div class="container-fluid py-3">
-        <h1 class="display-5 fw-bold fs-2">Project 6 - 打磚塊遊戲</h1>
-        <p class="col-md-8 fs-4 mb-2">
-          Project6的練習包括使用css美化外觀、製作遊戲動畫以及使用JavaScript實現遊戲操作邏輯。
-        </p>
-        <p class="col-md-8 fs-4 mb-2">
-          遊戲中透過滑鼠操控平台去接球，讓球反彈去撞擊方塊，消除完所有方塊後結束遊戲。
-        </p>
+        <h1 class="display-6 fw-bold">Project 6 - 打磚塊遊戲</h1>
+        <ul class="list-unstyled">
+          <li class="col-md-10 fs-5">
+            本專案使用:
+            <ol>
+              <li class="col-md-10 fs-5 my-2">
+                使用css美化外觀、製作遊戲動畫以及使用JavaScript實現遊戲操作邏輯。
+              </li>
+              <li class="col-md-10 fs-5 my-2">
+                遊戲中透過滑鼠操控平台去接球，讓球反彈後撞擊方塊，消除完所有方塊後結束遊戲。
+                每次新一輪遊戲開始，所有方塊都是隨機出現。
+              </li>
+            </ol>
+          </li>
+        </ul>
         <a
           href="https://github.com/james-chiou/breakout-clone"
           target="_blank"
@@ -118,7 +125,7 @@
     </div>
     <div class="ps-3 pt-2 bg-light rounded-3">
       <div class="container-fluid py-3">
-        <h1 class="display-5 fw-bold fs-2">聯絡方式</h1>
+        <h1 class="fw-bold fs-2">聯絡方式</h1>
         <p class="col-md-8 fs-4 mb-0">作者: 邱泓叡</p>
         <p class="col-md-8 fs-4 mt-0">信箱: hongjuichiou.james@gmail.com</p>
       </div>
